# qt-interf-test

./: .gitignore  CMakeLists.txt  justfile
qml/: ExitDialog.qml  Gauge.qml  JournalButton.qml  MetadataCard.qml  ResizeArea.qml  TitleBar.qml  main.qml
qml/components/: BorderWithBreak.qml  Gauge.qml  TitleBar.qml
qml/windows/: WeatherControlWindow.qml  WeatherWindow.qml
src/: main.cpp
src/weatherControl/: main.cpp
src/weatherData/: main.cpp
